XML drawable as a border for the main buttons. Items in strings.xml for adding contentDescription to mainButtons.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,10 @@
 <resources>
     <string name="app_name">VaccineApp</string>
+    <!-- Content descriptions for main buttons -->
+    <string name="btn_toDoctor">Button to find a doctor</string>
+    <string name="btn_toHospital">Button to find a hospital</string>
+    <string name="btn_toaAppointments">Button to see appointments</string>
+    <string name="btn_toHistorical">Button to find see historical</string>
+    <string name="btn_toEmergency">Button to call an ambulance</string>
+    <string name="btn_toMedicalshop">Button to see a medical shop</string>
 </resources>
