Change to MainActivity layout New icons Test functionality for signin, signup and forgot password activities

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -10,7 +10,7 @@
     <string name="btn_toEmergency">Button to call an ambulance</string>
     <string name="btn_toMedicalshop">Button to see a medical shop</string>
 
-    <!-- Appointments activity -->
+    <!-- AppointmentsActivity activity -->
     <string name="left_arrow">Button to see previous profile name and color</string>
     <string name="right_arrow">Button to see next profile name and color</string>
 
