--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">VaccineApp</string>
+    <string name="app_name">VaXXin</string>
     <string name="icon">Icon of the application</string>
     <!-- Main Activity -->
     <!-- Content descriptions for main buttons -->
